# rjo

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  archive.sh  target.txt
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  release.yaml
spec/: e2e_spec.sh
src/: main.rs
